security/ldap/ldap-ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ldap-ui
  namespace: ldap
  labels:
    app: ldap-ui
spec:
  selector:
    app: ldap-ui
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
